<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/rl_rootlayout">
    <include layout="@layout/layout_toolbar"
        android:id="@+id/toolbar_layout"/>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_layout"
        tools:context="com.example.manjooralam.flashdelivery.activities.MapsActivity" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDarkTransparent"
        android:layout_below="@id/toolbar_layout"
        android:padding="@dimen/dp_10">

        <TextView
            android:id="@+id/label_store_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_store_location"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_small"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"/>

        <TextView
            android:id="@+id/tv_store_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_store_location"
            android:textColor="@android:color/white"
            android:layout_toRightOf="@id/label_store_location"
            android:layout_alignTop="@id/label_store_location"
            android:layout_alignBottom="@id/label_store_location"
            android:paddingLeft="@dimen/dp_5"
            android:textSize="@dimen/txt_small"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:background="#1E90FF"
            android:lines="1"
            android:ellipsize="end"
            android:drawableLeft="@drawable/ic_store_location"
            android:drawablePadding="@dimen/dp_5"
            android:layout_marginLeft="@dimen/dp_5"/>



        <TextView
            android:id="@+id/label_your_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_your_location"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_small"
            android:layout_marginTop="@dimen/dp_5"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:layout_below="@id/label_store_location"/>

        <TextView
            android:id="@+id/tv_user_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_your_location"
            android:textColor="@android:color/white"
            android:layout_toRightOf="@id/label_store_location"
            android:layout_alignTop="@id/label_your_location"
            android:layout_alignBottom="@id/label_your_location"
            android:paddingLeft="@dimen/dp_10"
            android:textSize="@dimen/txt_small"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"




            android:lines="1"
            android:ellipsize="end"
            android:background="#1E90FF"
            android:layout_marginLeft="@dimen/dp_5"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_money_wallet_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_5">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s_nearest_store"
            android:textSize="@dimen/txt_normal"
            android:gravity="center"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_7"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:id="@+id/tv_nearest_store"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s_store_list"
            android:textSize="@dimen/txt_normal"
            android:gravity="center"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_7"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:id="@+id/tv_store_list"/>
    </LinearLayout>
</RelativeLayout>