<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.manjooralam.flashdelivery.activities.AboutUsActivity$LoginActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.manjooralam.flashdelivery.activities.SignUpActivity"
        android:orientation="vertical">
        <include layout="@layout/layout_toolbar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            >



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
               android:gravity="center"
                android:text="@string/s_verification"
                android:layout_marginTop="@dimen/dp_15"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/txt_small"
                android:id="@+id/temail"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:gravity="center"
                android:text="@string/r_code_verificaton"
                android:layout_marginTop="@dimen/dp_15"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/txt_small"
                android:id="@+id/email"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1_40"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp1_15"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:text="3"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/first_digit"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:background="@drawable/otp_shape"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:text="3"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/second_digit"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:background="@drawable/otp_shape"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:text="3"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/third_digit"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:background="@drawable/otp_shape"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:text="3"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/fourth_digit"
                    android:layout_marginLeft="@dimen/dp_5"
                   android:background="@drawable/otp_shape"/>


            </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:text="Submit"
                android:textSize="@dimen/txt_extra_large"
                android:gravity="center"
                android:layout_marginRight="@dimen/dp_35"
                android:layout_marginLeft="@dimen/dp_35"
                android:paddingBottom="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:id="@+id/tlogin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_didnt_receive_code"
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="center"
                android:textSize="@dimen/dp_15"
                android:id="@+id/dont_receive_code"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s1_wait"
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="center"
                android:textSize="@dimen/dp_15"
                android:id="@+id/forgot_password"
                android:textColor="@color/colorPrimaryDark"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
